--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 #app {
-  background-color: pink;
-  margin: 0vh 40vh;
+  margin: 0vh 25vh;
 }
 
 #todo-title {
@@ -10,15 +9,13 @@
   margin: 2vh 40vh;
   background: #f6bd60;
   color: white;
-  text-shadow: 2px 3px #000;
+  text-shadow: 2px 2px #000;
   font-family: "Courier New", monospace;
 }
 
 #todo-subtitle {
   text-align: center;
-  text-decoration: underline;
-  /* margin: 10vh; */
-  padding: 10vh 10vh 0 10vh;
+  padding: 3vh 10vh 0 10vh;
   font-family: "Courier New", monospace;
   word-spacing: 10px;
   white-space: nowrap;
@@ -27,12 +24,12 @@
 }
 
 #todo-input {
-  width: 30vh;
+  width: 40vh;
   padding: 12px 5px;
   margin: 0 0 0 255px;
   box-sizing: border-box;
   border-radius: 5px;
-  border-color: #07b94e;
+  border-color: #f6bd60;
 }
 
 #todo-submit {
@@ -44,7 +41,7 @@
 
 #todo-submit:hover {
   cursor: pointer;
-  background-color: #f5cac3;
+  background-color: #f6bd60;
   color: white;
 }
 
@@ -56,11 +53,11 @@
 
 li {
   padding: 10px 15px;
-  border-style: dotted;
+  border-style: solid;
   border-radius: 5px;
   width: 40vh;
   margin: 10px -27px;
   border-color: #000;
-  background-color: #84a59d;
-  color: #000;
+  background-color: #f28482;
+  color: whitesmoke;
 }
